@@ -1,3 +1,8 @@
+2001-10-17 Mark McLoughlin  <mark@skynet.ie>
+
+	* gnome-preferences.c: add comments to indicate which
+	ones have been replaced by gconf keys.
+
 Sun Oct 14 20:12:14 2001  George Lebl <jirka@5z.com>
 
 	* gnome-program.c: popt IS the evil incarnate.  There is no
